# ccwl

./: .dir-locals.el  .gitignore  .guix-authorizations  .guix-channel  HACKING.md  Makefile  Makefile.am  NEWS  NEWS.org  README.org  arunisaac-61802BB3.key  bootstrap.sh  configure  configure.ac  configure.scm  guix.scm  manifest.scm  ops  pre-inst-env  pre-inst-env.in  style.css  version
.guix/: ccwl-distribution.scm  ccwl-package.scm  ccwl-website.scm
build-aux/: build-home-page.el  distcheck.scm  find-dependencies.scm  generate-cwl-output.sh  generate-cwl-output.sh.in  test-driver.scm  test-driver.scm.in
ccwl/: ccwl.scm  conditions.scm  cwl.scm  graphviz.scm  lang.scm  skribilo.scm  ui.scm  utils.scm  yaml.scm
contrib/: pggb.scm
doc/: array-input-item-separators.scm  array-types.scm  capture-output-file-with-parameter-reference.out  capture-output-file-with-parameter-reference.scm  capture-output-file.out  capture-output-file.scm  capture-stdout.out  capture-stdout.scm  ccwl-load.scm  ccwl.skb  ccwl.texi  checksum.out  checksum.scm  decompress-compile-run.out  decompress-compile-run.scm  dictionary  echo.cwl  external-cwl-workflow.scm  hello-world.out  hello-world.scm  hello.tar  hello.tar.out  identity-construct.scm  inline-javascript-requirement.scm  js-expression-iota.scm  nested-array-types.scm  pass-stdin.out  pass-stdin.scm  prefix-arguments.scm  resource-requirement.scm  scatter-gather.scm  skribilo.scm  spell-check-text.txt  spell-check-workflow-1.scm  spell-check-workflow-2.scm  spell-check.scm  staging-input-files.scm  unseparated-prefix-arguments.scm
generate-cwl/: generate-cwl.scm  yaml.scm
scripts/: ccwl  ccwl.in
test-data/: echo.cwl  external-cwl-workflow.scm
test-utils/: utils.scm
tests/: ccwl.scm  cwl.scm  graphviz.scm  input-output-parameters.cwl  lang.scm  ui.scm  utils.scm  yaml.scm
website/: style.css
website/releases/: ccwl-0.1.0.tar.lz  ccwl-0.1.0.tar.lz.asc  ccwl-0.2.0.tar.lz  ccwl-0.2.0.tar.lz.asc  ccwl-0.3.0.tar.lz  ccwl-0.3.0.tar.lz.asc  ccwl-0.4.0.tar.lz  ccwl-0.4.0.tar.lz.asc  ccwl-0.5.0.tar.lz  ccwl-0.5.0.tar.lz.asc
